# Verbio

./: CMakeLists.txt  README.md  SetupConfig.cmake  genPrj.pl
src/: Application.cpp  CMakeLists.txt  CompilerFlags.cmake  FreeTextRuleAcceptor.cpp  FreeTextRuleAcceptor.h  FreeTextRuleTransformer.cpp  FreeTextRuleTransformer.h  IInputHandler.h  IScannerRuleAcceptor.h  IScannerRuleTransformer.h  IStreamTokenizer.h  ITextFormatter.h  KeyboardInputHandler.cpp  KeyboardInputHandler.h  ScannerDefs.cpp  ScannerDefs.h  ScannerRule.cpp  ScannerRule.h  StreamTokenizer.cpp  StreamTokenizer.h  TextFormatter.cpp  TextFormatter.h  TextFormatterDefs.h  TextToNumberRuleAcceptor.cpp  TextToNumberRuleAcceptor.h  TextToNumberRuleTransformer.cpp  TextToNumberRuleTransformer.h  TextToNumberScannerDefs.cpp  TextToNumberScannerDefs.h  TokenScanner.cpp  TokenScanner.h  Verbio.vcxproj  Verbio.vcxproj.filters  WhiteList.cmake  cmake_install.cmake
